Fix #20 z-index prob between widebanner and pageId
Solution found here : https://stackoverflow.com/questions/12517158/z-index-in-internet-explorer-not-working

--- a/css/mixture.less
+++ b/css/mixture.less
@@ -17,12 +17,13 @@
 
 /**
  * Z-INDEXES
- * Sidebar, ToC: 1
- * Scroll-up: 7
+ * Sidebar, ToC, #mixture__widebanner: 1
+ * Scroll-up, #mixture__pagenav ul: 7
  * Lightbox: 8
  * Dropdowns, Modal overlay: 9
  * Admin dropdown
  * Mixture breakpoint helper: 1000 to 1005
+ * IE z-index bug : 9999
  */
 
 body {
@@ -296,6 +297,12 @@ div.breadcrumbs div.youarehere {
 #mixture__alerts {
     padding: 0 0 calc(@ini_spacer / 4) 0;
 }
+#mixture__pagenav {
+    z-index: 9999;
+}
+#mixture__widebanner {
+    z-index: 1;
+}
 #mixture__widebanner img {
     /* IE fox for widebanner larger than main container in wide screen */
     max-width: @ini_site_width;
@@ -310,6 +317,7 @@ body.hasWidebanner #mixture__pagenav > ul {
     padding: 0;
     flex-direction: row-reverse;
     width: 100%;
+    z-index: 7;
 }
 #mixture__pagenav ul li {
     margin: 0;
